<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_pin_all"
        android:title="@string/action_pin_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_start_user"
        android:title="@string/action_start_user"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stop_user"
        android:title="@string/action_stop_user"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_user_color"
        android:title="@string/action_user_color"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_switch_user"
        android:title="@string/action_switch_user"
        app:showAsAction="never" />
</menu>
